# cbr_control

./: CMakeLists.txt  README.md  package.xml
.github/: Doxyfile
.github/workflows/: build_and_test.yml
cmake/: ConfigTemplate.cmake.in
examples/: CMakeLists.txt  asif_integrator.cpp  pendulum_main.cpp  pendulum_problem.hpp  planarquad_dynamics.hpp  se2_main.cpp  se2_problem.hpp  segway_dynamics.hpp  segway_main.cpp  segway_problem.hpp  so3_main.cpp  so3_problem.hpp
include/cbr_control/: asif++.hpp  care.hpp  derivator.hpp  first_order_filter.hpp  integrator.hpp  pid.hpp  rate_limiter.hpp
include/cbr_control/mpc/: cltv_ocp.hpp  cltv_ocp_lie.hpp  dltv_ocp.hpp  dltv_ocp_solver.hpp  mpc_tracking.hpp  ocp_common.hpp
include/cbr_control/pge/: ceres_marginalization.hpp  ceres_utils.hpp  pge.hpp
src/: ceres_marginalization.cpp
test/: cltv_problem.hpp  dltv_problem.hpp  test_asif.cpp  test_care.cpp  test_derivator.cpp  test_fof.cpp  test_integrator.cpp  test_mpc.cpp  test_pge.cpp  test_pid.cpp  test_rate_limiter.cpp
