<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cbr_control</name>
  <version>0.1.0</version>
  <description>Collection of various control tools</description>

  <author>Thomas Gurriet</author>
  <maintainer email="john.b.mains@gmail.com">jbm</maintainer>
  <license>MIT</license>

  <depend>libboost-dev</depend>
  <depend>eigen</depend>
  <depend>sophus</depend>

  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
